Revision history for Dist::Zilla::Plugin::CompileTests

{{$NEXT}}

2.002     2013-04-28 17:19:00 Europe/Paris
 - require version of Test::More that added is_passing()
   (RT#84904, Karen Etheridge)

2.001     2013-02-12 13:03:37 Europe/Paris
 - fix EOL in generated test (Olivier Mengué)

2.000     2013-02-11 13:52:18 Europe/Paris
 - new bail_out_on_fail option (Karen Etheridge)
 - dzil migrated to @Author::JQUELIN

1.112820  2011-10-09 10:31:56 Europe/Paris
 - look for scripts in scripts/ too (chris weyl)

1.112400  2011-08-28 13:41:01 Europe/Paris
 - fix breakage introduced by __END__ markers (randy stauner)
 - added test suite (randy stauner)

1.112392  2011-08-27 11:56:36 Europe/Paris
 - examples/ updated to use new module name

1.112391  2011-08-27 11:50:33 Europe/Paris
 - more aggressive deprecation in documentation
 - minimum date before DZP::CompileTests removal: 2012-08-27
 - github repository renamed to match new dist name

1.112390  2011-08-27 11:40:32 Europe/Paris
 - renamed to Dist::Zilla::Plugin::Test::Compile. DZP::CompileTests,
   although deprecated, continues to work (fredric kent)
 - eliminate multiple phases work (fredric kent)

1.112380  2011-08-26 13:28:44 Europe/Paris
 - skip non-perl scripts in bin directory (harley pig)

1.110930  2011-04-03 11:19:08 Europe/Paris
 - fix rt#67183 - do not fail if no bin directory exists

1.110870  2011-03-28 12:44:54 Europe/Paris
 - allow regex skip of script files (jesse luehrs)

1.103030  2010-10-30 15:00:24 Europe/Paris
 - Removed reuse of Test::NeedsDisplay. It fails when DISPLAY is not
   set! (ahmad m. zawawi)

1.103010  2010-10-28 17:26:19 Europe/Paris
 - no_display is now called needs_display and it reuses 
   Test::NeedsDisplay (ahmad m. zawawi)

1.103000  2010-10-27 09:16:26 Europe/Paris
 - new option no_display to skip tests on non win32 systems when
   $ENV{DISPLAY} is not set (ahmad m. zawawi)

1.101800  2010-06-29 18:42:20 Europe/Paris
 - skip all if no test are to be run (jesse luehrs)