@@ -1,0 +1,6 @@
+package Bar;
+# ABSTRACT: Bar
+
+warn 'warning during compilation';
+1;
+__END__
