@@ -1,6 +1,7 @@
 Revision history for Dist::Zilla::Plugin::CompileTests
 
 {{$NEXT}}
+ - new fail_on_warning option (Karen Etheridge)
 
 2.002     2013-04-28 17:19:00 Europe/Paris
  - require version of Test::More that added is_passing()
